assets/css/style.css
/*google fonts import*/

@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@900&family=Roboto&display=swap');

/*general document styling*/

html {
    scroll-behavior: smooth;
}

html,body{
    overflow-x: hidden;
    overflow-y: auto;
  }

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    background-color: black;
    color: white;
}

a {
    color: rgba(255, 0, 0, 0.6);
    text-decoration: none;
}

h1 {
    font-family: 'Archivo', sans-serif;
    font-size: 1.6rem;
    letter-spacing: 1px;
    color: rgba(255, 0, 0, 0.6);
}

h2, h3 {
    font-size: 1rem;
    color: rgba(255, 0, 0, 0.6);
    letter-spacing: 1px;
    font-family: 'Archivo', sans-serif;
}

/*nav bar*/

nav {
    width: 50vw;
}

#gym-name {
    text-transform: uppercase;
    border-right: 5px solid rgba(255, 0, 0, 0.6);
    padding-right: 35px;
}

.navigation, .navigation a {
    font-family: 'Archivo', sans-serif;
    font-size: 1.6rem;
    letter-spacing: 1px;
    color: rgba(255, 0, 0, 0.6);
    background-color: black;
    text-decoration: none;
    margin: 0;
    padding: 0;
}

.navigation {
    padding: 25px 50px;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
}

.navigation ul {
    width: 100%;
}

.navigation li{
    background-color: black;
    display: inline-block;
}

nav a:hover{
    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
}

.active {
    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
}

/*hero image*/

#hero-cover {
    height: 100vh;
    width: 100%;
    position: relative;
    overflow: hidden;
}

#hero-image {
    height: 100vh;
    width: 100%;
    background: #3a3a3a url("../images/hero-image.jpg") no-repeat center center;
    background-size: cover;
    position: relative;
}

.background-image-cover-opacity {
    background-color: rgba(0, 0, 0, 0.65);
    height: inherit;
}

#ready-for-war {
    height: inherit;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#ready-for-war a {
    background: rgba(255, 0, 0, 0.6);
    border: none;
    height: auto;
    width: 300px;
    border-radius: 15px;
    text-align: center;
    text-decoration: none;
    color: black;
}

/*main call to action*/

#main-action {
    transition: box-shadow .5s;
}

#main-action h1 {
    color: black;
}

#main-action:hover {
    background: rgba(0, 0, 0, 0.5);
    color: red;
    box-shadow: 0 0 10px red;
}

#main-action:hover h1{
    color: red;
}

/*main content styling and positioning using display flex */

hr {
    border: none;
    background-color: rgba(255, 0, 0, 0.6);
    margin: 50px;
    height: 5px;
}

.main-content-container {
    background: #3a3a3a url("../images/background-gym.jpg") no-repeat center center;
    background-attachment: fixed;
    background-size: cover;
}

.main-content-container {
    height: 100vh;
    box-sizing: border-box;
}

.main-content-container h1 {
    font-size: 1.75rem;
}

.main-content-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-content h1 {
    font-size: 1.75rem;
}

#who-are-we, #what-do-we-do, #why-do-we-do-it {
    box-sizing: border-box;
    width: 100vw;
    border: 1px solid rgba(255, 0, 0, 0.6);
    border-radius: 15px;
    margin: 50px;
    height: fit-content;
    padding: 25px;
    text-align: left;
    background-color: rgba(0, 0, 0, 0.85)
}

#who-are-we > h1, #what-do-we-do > h1, #why-do-we-do-it > h1 {
    text-align: center;
}

#what-do-we-do {
    margin: auto;
}

.red-large-strong-text {
    text-transform: uppercase;
    font-size: 105%;
    letter-spacing: 2px;
    color: rgba(255, 0, 0, 0.6);
    font-weight: 900;
    font-style: normal;
}

.list {
    line-height: 25px
}

/*location map*/

#map-container {
    width: 100vw;
    height: 30vh;
}

#map {
    width: 100vw;
    height: 30vh;
    border: 2px solid rgba(255, 0, 0, 0.6);
}

/*footer styling*/

footer {
    height: 10vh;
    display: flex;
    position: relative;
}

#footer-social-media {
    list-style-type: none;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    color: rgba(255, 0, 0, 0.6)
}
 
#footer-social-media i{
   font-size: 2rem;
}

/*Lifts page styling*/

#background-image {
    background: #3a3a3a url("../images/background-gym.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    height: fit-content;
    padding-bottom: 100px;
    padding-top: 50px;
}

.page-title {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 4px;
    border-bottom: 2px solid rgba(255, 0, 0, 0.6);
    border-top: 2px solid rgba(255, 0, 0, 0.6);
    padding: 25px 50px;
    margin-bottom: 50px;
    background-color: rgba(0, 0, 0, 0.85);
}

#lift-container {
    height: fit-content;
    width: 90vw;
    display: flex;
    align-items: center;
    justify-content:center;
    text-align: center;
    margin: 0 auto;
    margin-bottom: 50px;
}

.lift-video {
    box-sizing: border-box;
    border: 1px solid rgba(255, 0, 0, 0.6);
    border-radius: 15px;
    margin: 0 50px;
    height: auto;
    padding: 25px;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.85)
}

.lift-video > video {
    width: 20vw;
    display: block;
}

.lift-video > p {
    padding-bottom: 5px;
}

/*lift results table*/

#lifts-table-container {
    width: 90vw;
    background-color: rgba(0, 0, 0, 0.85);
    border: 1px solid rgba(255, 0, 0, 0.6);
    border-radius: 15px;
    text-align: center;
    margin: 0 auto;
    margin-top: 25px;
    margin-bottom: 100px;
    overflow: hidden;
}

#lifts-table-container > h2,
#lifts-table-container > h3 {
    font-size: 1.3rem;
    padding: 25px;
    text-transform: uppercase;
    letter-spacing: 4px;
}

.lifts-table {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    table-layout: fixed;
    padding-bottom: 50px;
}

.lifts-table th {
    border-bottom: 1px solid rgba(255, 0, 0, 0.6);
    color: rgba(255, 0, 0, 0.6);
}

.lifts-table th, .lifts-table td {
    padding: 5px;
    vertical-align: middle;
}


/*Lift spotlight*/

#spotlight-container {
    width: 88vw;
    height: fit-content;
    background-color: rgba(0, 0, 0, 0.85);
    border: 1px solid rgba(255, 0, 0, 0.6);
    border-radius: 15px;
    text-align: center;
    margin: 0 auto;
    padding: 25px;
    overflow: hidden;
}

#spotlight-container > h2 {
    font-size: 1.3rem;
    text-transform: uppercase;
    letter-spacing: 4px;
}

#spotlight-container > p {
    width: 80%;
    text-align: center;
    margin: 0 auto;
}

#deadlift-record-spotlight {
   margin: 0 auto;
   height: 500px;
   width: 50%;
   border: none;
}

/*Sign up page styling*/


#sign-up-background-image {
    background: #3a3a3a url("../images/background-gym.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    height: 100vh;
    padding-bottom: 100px;
    padding-top: 50px;
}

#form-container {
    background-color: rgba(0, 0, 0, 0.85);
    border: 1px solid rgba(255, 0, 0, 0.6);
    border-radius: 15px;
    margin: 0 auto;
    padding:  25px 50px;
    width: 50vw;
}

/*Our-email uses code learned online from a post on css-tricks.com around the topic of centering an absolute element
This element is used to fill the empty space between the columns whilst still allowing the form to fill an asthetically pleasing
width of the page*/

#our-email {
    position: absolute;
    left: 50%;
    text-align: center;
    -webkit-transform: translate(-50%);
    transform: translate(-50%);

}

#form {
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    width: 100%;
    justify-content: space-between;
    line-height: 50px;
}

#form input, #form textarea, select {
    background-color: rgba(0, 0, 0, 0.6);
    border: 1px solid red;
}

select {
    color: white;
    font-family: inherit;
}

#about-you-column,
#experience-column {
    width: 50%;
    text-align: center;
}

#about-you-column > h2,
#experience-column > h2 {
    font-size: 1.6rem;
    margin-bottom: 0;
    margin-top: 50px;
}

#form-bottom {
    flex-basis: 100%;
    justify-self: flex-end;
    width: fit-content;
    margin: 50px;
    padding: 10px;
}

#additional-comments {
    width: 75%;
    height: 10vh;
}

#form button {
    background-color: rgba(255, 0, 0, 0.6);
    border: black;
    border-radius: 15px;
    width: 10%;
    color: black;
    font-family: "Roboto", sans-serif;
    font-size: 1rem;
}

#form button:hover {
    background: rgba(0, 0, 0, 0.5);
    color: red;
    box-shadow: 0 0 10px red;
}

::placeholder {
    color: white;
    font-family: "Roboto", sans-serif;
}

#form input {
    color: white;
    font-family: "Roboto", sans-serif;
}

/*Media queries for screen sizes with widths 1800-1500px-800px
It was discovered that the main content had an intrustive overflow on devices such as the Nexus Hub Max just below 1500px
width. This was solved by simply moving the main content style changes from a max-width of 850px to 1500px whilst still
maintaining desktop and tablet responsiveness*/

@media screen and (max-width:1800px) {

    nav {
        width: 100vw;
    }
}

@media screen and (max-width:1500px) {

    .main-content-container {
        display: block;
        height: fit-content;
        padding:5px;
    }

    #who-are-we, #what-do-we-do, #why-do-we-do-it {
        width: fit-content;
        max-width: 80vw;
        margin: 0 auto;
        margin-bottom: 25px;
        padding: 25px;
    }

    #spotlight-container {
        width: 75%;
    }

    #deadlift-record-spotlight {
        width: 80%;
        height: 350px;
    }

    #form button {
        width: 100px;
    }
}

/*Media queries for smartphones with screen sizes below 800px */

@media  screen and (max-width:850px) {

    .main-content-container {
        font-size: 0.8rem;
    }

    .navigation {
        display: block;
        text-align: center;
    }

    .navigation a {
        display: block;
        font-size: 1rem;
    }

    .navigation li {
        margin-right: 10px;
    }

    #gym-name {
        display: block;
        clear: both;
        padding-right: 0;
        border: none;
        font-size: 1.2rem;
    }

    #main-action h1 {
        font-size: 1rem;
    }

    #footer-social-media {
        flex-wrap: wrap;
    }

    #footer-copyright {
        flex-basis: 100%;
        text-align: center;
    }

    /*Lifts page*/

    #lift-container {
        display: block;
        clear: both;
        width: 100%;
        text-align: center;
    }

    .lift-video {
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        justify-content: center;
    }
    
    .lift-video > video{
        width: 90%;
    }
 
    #deadlift-record-spotlight {
        width: 100%;
        height: 250px;
    }

    /*Sign up page*/

    #sign-up-background-image {
        height: fit-content;
    }

    #form {
        display: block;
    }

    #about-you-column,
    #experience-column {
        width: 100%;
        text-align: center;
    }

    #form-bottom {
        width: 100%;
        text-align: center;
        margin: 0 auto;
    }

    #form button {
        width: 100px;
    }

}

/*specific styling for the form at a certain screen size 960px*/

@media  screen and (max-width:960px) {

    #form-container {
        font-size: 0.75rem;
    }

    #form-container h2 {
        font-size: 1.2rem;
    }

    #form input {
        font-size: 0.75rem;
        max-width: 50px;
    }

}
    

